# Molecular-Structure-Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_app.py
scripts/: sample.py  train.py
src/: __init__.py  cli.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  molecular_models.py
src/sampling/: __init__.py  sampler.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  utils.py
tests/: test_data_evaluation.py  test_models.py
